---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Address {
  street: String
}

type Query {
  user: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
}

type User @addField(name: "address", path: ["address", "street"]) {
  address: Address @modify(omit: true)
}
